tdf#105423 remove unecessary mnCol and mnColCnt

mnCol isn't necessary because it always get value from
mnColCnt, which is always increased by 1.

Change-Id: I373ed27694e91369f3f20b43ee985fee7a0f63f6